# trinity-nexus

./: .env.example  .gitignore  DISTRIBUTE.md  HANDOFF.md  INSTALL.md  LICENSE  README.md  install.ps1  install.sh  pyproject.toml  uninstall.ps1  uninstall.sh
scripts/: bootstrap.sh
src/nexus/: __init__.py  _llm_util.py  agent.py  banner.py  cli.py  code_agent.py  compaction.py  config.py  cost.py  graph.py  hooks.py  modes.py  onboarding.py  optimizer.py  permissions.py  plan.py  project.py  prompts.py  reflect.py  repl.py  security.py  sessions.py  thinking.py  tools.py
src/nexus/distillation/: __init__.py  collector.py  eval.py  orchestrator.py  teacher.py  trainer.py  validator.py
src/nexus/mcp_server/: __init__.py  server.py
src/nexus/memory/: __init__.py  archival.py  core.py  embeddings.py  nine_tier.py  recall.py  tiers.py
src/nexus/mesh/: __init__.py  discover.py  identity.py  sync.py
src/nexus/retrieval/: __init__.py  index.py  ingest.py  tool.py
src/nexus/runtime/: __init__.py  types.py
src/nexus/runtime/backends/: base.py  llama_cpp.py  ollama.py  openai_compat.py
src/nexus/sandbox/: __init__.py
src/nexus/skills/: __init__.py  base.py  evolve.py  registry.py  router.py
src/nexus/skills/evolved/: __init__.py  text_shorten.py
src/nexus/skills/evolved_archive/: rejected_1777005040.py  rejected_1777005258.py
src/nexus/skills/seed/: brainstorm_ideas.py  code_review.py  compare_options.py  critique_plan.py  decompose_task.py  draft_email.py  extract_entities.py  recall_memory.py  research_question.py  rewrite_clear.py  store_memory.py  summarize_text.py  translate_jargon.py
src/oracle/: agent.py  banner.py  cli.py  config.py  prompts.py  reflect.py  repl.py  tools.py
src/oracle/distillation/: __init__.py  collector.py  eval.py  orchestrator.py  teacher.py  trainer.py
src/oracle/mcp_server/: __init__.py  server.py
src/oracle/memory/: __init__.py  archival.py  core.py  embeddings.py  recall.py  tiers.py
src/oracle/mesh/: __init__.py  identity.py  sync.py
src/oracle/retrieval/: __init__.py  index.py  ingest.py  tool.py
src/oracle/sandbox/: __init__.py  docker_sandbox.py
src/oracle/skills/: __init__.py  evolve.py  registry.py  router.py
src/oracle/skills/evolved/: text_shorten.py
src/oracle/skills/mesh/: __init__.py
src/oracle/skills/seed/: brainstorm_ideas.py  code_review.py  compare_options.py  critique_plan.py  decompose_task.py  draft_email.py  extract_entities.py  recall_memory.py  research_question.py  rewrite_clear.py  store_memory.py  summarize_text.py  translate_jargon.py
tests/: conftest.py  test_apply_diff.py  test_code_agent.py  test_cost.py  test_distillation.py  test_eval.py  test_evolve.py  test_graph.py  test_hooks.py  test_llm_util.py  test_memory.py  test_mesh.py  test_modes.py  test_nine_tier.py  test_onboarding.py  test_optimizer.py  test_permissions.py  test_plan.py  test_retrieval.py  test_routing.py  test_security.py  test_sessions.py  test_skills.py
